nuevo router eliminacionde referenca a LSD_CHurch_history
